sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:7: error: ';' expected but 'false' found.
			chgt fait == false
                                     ^